--- a/kind-cluster.yaml
+++ b/kind-cluster.yaml
@@ -5,7 +5,7 @@ networking:
   apiServerPort: 6443
   podSubnet: "10.240.0.0/16"
   serviceSubnet: "10.0.0.0/16"
-  disableDefaultCNI: true
+  #disableDefaultCNI: true
   kubeProxyMode: "iptables"
 nodes:
   - role: control-plane
@@ -37,4 +37,12 @@ nodes:
         hostPort: 15021
         listenAddress: "127.0.0.1"
         protocol: TCP
-
+  - role: worker
+    # This appears to not work so have to set label manually
+    kubeadmConfigPatches:
+      - |
+        kind: InitConfiguration
+        nodeRegistration:
+          kubeletExtraArgs:
+            node-labels: "ingress-ready=true"
+  - role: worker
