--- a/kind-cluster.yaml
+++ b/kind-cluster.yaml
@@ -5,7 +5,7 @@ networking:
   apiServerPort: 6443
   podSubnet: "10.240.0.0/16"
   serviceSubnet: "10.0.0.0/16"
-  #disableDefaultCNI: true
+  disableDefaultCNI: true
   kubeProxyMode: "iptables"
 nodes:
   - role: control-plane
