--- a/kind-cluster.yaml
+++ b/kind-cluster.yaml
@@ -1,5 +1,7 @@
 apiVersion: kind.x-k8s.io/v1alpha4
 kind: Cluster
+featureGates:
+ PodSecurity: true
 networking:
   apiServerAddress: "127.0.0.1"
   apiServerPort: 6443
@@ -10,12 +12,29 @@ networking:
 nodes:
   - role: control-plane
     kubeadmConfigPatches:
-      - |
-        kind: InitConfiguration
-        nodeRegistration:
-          kubeletExtraArgs:
-            node-labels: "ingress-ready=true"
+    - |
+      kind: InitConfiguration
+      nodeRegistration:
+        kubeletExtraArgs:
+          node-labels: "ingress-ready=true"
+    #- |
+    #  kind: ClusterConfiguration
+    #    apiServer:
+    #      extraArgs:
+    #        audit-log-path: /etc/kubernetes/audit/audit.log
+    #        audit-policy-file: /etc/kubernetes/audit/audit-policy.yaml
+    #      extraVolumes:
+    #        - name: audit-policy
+    #          hostPath: /etc/kubernetes/audit
+    #          mountPath: /etc/kubernetes/audit
+    #          readOnly: false
+    #          pathType: "DirectoryOrCreate"
     extraMounts:
+    #- hostPath: /tmp/api/
+    #  containerPath: /etc/kubernetes/audit
+    #  readOnly: false
+    #  selinuxRelabel: false
+    #  propagation: None
     #  - containerPath: /var/lib/kubelet/config.json
     #    hostPath: ./config.json
     #  - hostPath: ./data
