--- a/kind-cluster.yaml
+++ b/kind-cluster.yaml
@@ -56,6 +56,10 @@ nodes:
         hostPort: 15021
         listenAddress: "127.0.0.1"
         protocol: TCP
+      - containerPort: 31467
+        hostPort: 8444
+        listenAddress: "127.0.0.1"
+        protocol: TCP
   - role: worker
     # This appears to not work so have to set label manually
     kubeadmConfigPatches:
