--- a/tigera-operator.yaml
+++ b/tigera-operator.yaml
@@ -1,5 +1,7 @@
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_bgpconfigurations.yaml
+# Source: crds/calico/crd.projectcalico.org_bgpconfigurations.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -143,7 +145,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_bgppeers.yaml
+# Source: crds/calico/crd.projectcalico.org_bgppeers.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -257,7 +261,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_blockaffinities.yaml
+# Source: crds/calico/crd.projectcalico.org_blockaffinities.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -319,7 +325,7 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_caliconodestatuses.yaml
+# Source: crds/calico/crd.projectcalico.org_caliconodestatuses.yaml
 
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -585,7 +591,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_clusterinformations.yaml
+# Source: crds/calico/crd.projectcalico.org_clusterinformations.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -650,7 +658,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_felixconfigurations.yaml
+# Source: crds/calico/crd.projectcalico.org_felixconfigurations.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -769,6 +779,20 @@ spec:
                   logs are emitted to the BPF trace pipe, accessible with the command
                   `tc exec bpf debug`. [Default: Off].'
                 type: string
+              bpfPSNATPorts:
+                anyOf:
+                - type: integer
+                - type: string
+                description: 'BPFPSNATPorts sets the range from which we randomly
+                  pick a port if there is a source port collision. This should be
+                  within the ephemeral range as defined by RFC 6056 (1024–65535) and
+                  preferably outside the  ephemeral ranges used by common operating
+                  systems. Linux uses 32768–60999, while others mostly use the IANA
+                  defined range 49152–65535. It is not necessarily a problem if this
+                  range overlaps with the operating systems. Both ends of the range
+                  are inclusive. [Default: 20000:29999]'
+                pattern: ^.*
+                x-kubernetes-int-or-string: true
               chainInsertMode:
                 description: 'ChainInsertMode controls whether Felix hooks the kernel''s
                   top-level iptables chains by inserting a rule at the top of the
@@ -882,6 +906,14 @@ spec:
                   spaces, example; "SNATFullyRandom=true,MASQFullyRandom=false,RestoreSupportsLock=".
                   "true" or "false" will force the feature, empty or omitted values
                   are auto-detected.
+                type: string
+              floatingIPs:
+                default: Disabled
+                description: FloatingIPs configures whether or not Felix will program
+                  floating IP addresses.
+                enum:
+                - Enabled
+                - Disabled
                 type: string
               genericXDPEnabled:
                 description: 'GenericXDPEnabled enables Generic XDP so network cards
@@ -999,6 +1031,12 @@ spec:
                   pattern: ^.*
                   x-kubernetes-int-or-string: true
                 type: array
+              logDebugFilenameRegex:
+                description: LogDebugFilenameRegex controls which source code files
+                  have their Debug log output included in the logs. Only logs from
+                  files with names that match the given regular expression are included.  The
+                  filter only applies to Debug level logs.
+                type: string
               logFilePath:
                 description: 'LogFilePath is the full path to the Felix log. Set to
                   none to disable file logging. [Default: /var/log/calico/felix.log]'
@@ -1224,7 +1262,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_globalnetworkpolicies.yaml
+# Source: crds/calico/crd.projectcalico.org_globalnetworkpolicies.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -2080,7 +2120,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_globalnetworksets.yaml
+# Source: crds/calico/crd.projectcalico.org_globalnetworksets.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -2134,7 +2176,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_hostendpoints.yaml
+# Source: crds/calico/crd.projectcalico.org_hostendpoints.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -2243,7 +2287,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_ipamblocks.yaml
+# Source: crds/calico/crd.projectcalico.org_ipamblocks.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -2278,8 +2324,16 @@ spec:
               resource.
             properties:
               affinity:
+                description: Affinity of the block, if this block has one. If set,
+                  it will be of the form "host:<hostname>". If not set, this block
+                  is not affine to a host.
                 type: string
               allocations:
+                description: Array of allocations in-use within this block. nil entries
+                  mean the allocation is free. For non-nil entries at index i, the
+                  index is the ordinal of the allocation within this block and the
+                  value is the index of the associated attributes in the Attributes
+                  array.
                 items:
                   type: integer
                   # TODO: This nullable is manually added in. We should update controller-gen
@@ -2287,6 +2341,10 @@ spec:
                   nullable: true
                 type: array
               attributes:
+                description: Attributes is an array of arbitrary metadata associated
+                  with allocations in the block. To find attributes for a given allocation,
+                  use the value of the allocation's entry in the Allocations array
+                  as the index of the element in this array.
                 items:
                   properties:
                     handle_id:
@@ -2298,12 +2356,38 @@ spec:
                   type: object
                 type: array
               cidr:
+                description: The block's CIDR.
                 type: string
               deleted:
+                description: Deleted is an internal boolean used to workaround a limitation
+                  in the Kubernetes API whereby deletion will not return a conflict
+                  error if the block has been updated. It should not be set manually.
                 type: boolean
+              sequenceNumber:
+                default: 0
+                description: We store a sequence number that is updated each time
+                  the block is written. Each allocation will also store the sequence
+                  number of the block at the time of its creation. When releasing
+                  an IP, passing the sequence number associated with the allocation
+                  allows us to protect against a race condition and ensure the IP
+                  hasn't been released and re-allocated since the release request.
+                format: int64
+                type: integer
+              sequenceNumberForAllocation:
+                additionalProperties:
+                  format: int64
+                  type: integer
+                description: Map of allocated ordinal within the block to sequence
+                  number of the block at the time of allocation. Kubernetes does not
+                  allow numerical keys for maps, so the key is cast to a string.
+                type: object
               strictAffinity:
+                description: StrictAffinity on the IPAMBlock is deprecated and no
+                  longer used by the code. Use IPAMConfig StrictAffinity instead.
                 type: boolean
               unallocated:
+                description: Unallocated is an ordered list of allocations which are
+                  free in the block.
                 items:
                   type: integer
                 type: array
@@ -2325,7 +2409,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_ipamconfigs.yaml
+# Source: crds/calico/crd.projectcalico.org_ipamconfigs.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -2382,7 +2468,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_ipamhandles.yaml
+# Source: crds/calico/crd.projectcalico.org_ipamhandles.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -2439,7 +2527,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_ippools.yaml
+# Source: crds/calico/crd.projectcalico.org_ippools.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -2485,13 +2575,13 @@ spec:
               cidr:
                 description: The pool CIDR.
                 type: string
+              disableBGPExport:
+                description: 'Disable exporting routes from this IP Pool''s CIDR over
+                  BGP. [Default: false]'
+                type: boolean
               disabled:
                 description: When disabled is true, Calico IPAM will not assign addresses
                   from this pool.
-                type: boolean
-              disableBGPExport:
-                description: "Disable exporting routes from this IP Pool's CIDR over
-                  BGP. [Default: false]"
                 type: boolean
               ipip:
                 description: 'Deprecated: this field is only used for APIv1 backwards
@@ -2549,10 +2639,15 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_ipreservations.yaml
+# Source: crds/calico/crd.projectcalico.org_ipreservations.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: (devel)
+  creationTimestamp: null
   name: ipreservations.crd.projectcalico.org
 spec:
   group: crd.projectcalico.org
@@ -2601,7 +2696,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_kubecontrollersconfigurations.yaml
+# Source: crds/calico/crd.projectcalico.org_kubecontrollersconfigurations.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -2703,6 +2800,11 @@ spec:
                         type: string
                     type: object
                 type: object
+              debugProfilePort:
+                description: DebugProfilePort configures the port to serve memory
+                  and cpu profiles on. If not specified, profiling is disabled.
+                format: int32
+                type: integer
               etcdV3CompactionPeriod:
                 description: 'EtcdV3CompactionPeriod is the period between etcdv3
                   compaction requests. Set to 0 to disable. [Default: 10m]'
@@ -2813,6 +2915,11 @@ spec:
                             type: string
                         type: object
                     type: object
+                  debugProfilePort:
+                    description: DebugProfilePort configures the port to serve memory
+                      and cpu profiles on. If not specified, profiling is disabled.
+                    format: int32
+                    type: integer
                   etcdV3CompactionPeriod:
                     description: 'EtcdV3CompactionPeriod is the period between etcdv3
                       compaction requests. Set to 0 to disable. [Default: 10m]'
@@ -2845,7 +2952,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_networkpolicies.yaml
+# Source: crds/calico/crd.projectcalico.org_networkpolicies.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -3682,7 +3791,9 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/calico/kdd/crd.projectcalico.org_networksets.yaml
+# Source: crds/calico/crd.projectcalico.org_networksets.yaml
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -5855,7 +5966,7 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       containers:
         - name: tigera-operator
-          image: quay.io/tigera/operator:v1.25.3
+          image: quay.io/tigera/operator:v1.25.7
           imagePullPolicy: IfNotPresent
           command:
             - operator
@@ -5873,7 +5984,7 @@ spec:
             - name: OPERATOR_NAME
               value: "tigera-operator"
             - name: TIGERA_OPERATOR_INIT_IMAGE_VERSION
-              value: v1.25.3
+              value: v1.25.7
           envFrom:
             - configMapRef:
                 name: kubernetes-services-endpoint
