--- a/install-istio.yaml
+++ b/install-istio.yaml
@@ -4,7 +4,7 @@ metadata:
   namespace: istio-system
   name: istiocontrolplane
 spec:
-  hub: docker.io/querycapistio
+  hub: ghcr.io/resf/istio
   profile: demo
   components:
     base:
