--- a/tls-passthrough/nginx-virtualservice2.yaml
+++ b/tls-passthrough/nginx-virtualservice2.yaml
@@ -1,20 +1,20 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: nginx
+  name: nginx2
 spec:
   hosts:
-  - nginx.example.com
+  - nginx2.example.com
   gateways:
-  - mygateway
+  - mygateway2
   tls:
   - match:
     - port: 443
       sniHosts:
-      - nginx.example.com
+      - nginx2.example.com
     route:
     - destination:
-        host: my-nginx
+        host: my-nginx2
         port:
           number: 443
       weight: 100
