--- a/tls-passthrough/nginx2.conf
+++ b/tls-passthrough/nginx2.conf
@@ -5,11 +5,7 @@ http {
   log_format main '$remote_addr - $remote_user [$time_local]  $status '
   '"$request" $body_bytes_sent "$http_referer" '
   '"$http_user_agent" "$http_x_forwarded_for"';
-  log_format combined_ssl '$remote_addr - $remote_user [$time_local] '
-                        '$ssl_protocol/$ssl_cipher '
-                        '"$request" $status $body_bytes_sent '
-                        '"$http_referer" "$http_user_agent"';
-  access_log /var/log/nginx/access.log combined_ssl;
+  access_log /var/log/nginx/access.log main;
   error_log  /var/log/nginx/error.log;
 
   server {
@@ -18,9 +14,14 @@ http {
     root /usr/share/nginx/html;
     index index.html;
 
-    server_name nginx.example.com;
+    server_name nginx2.example.com;
     ssl_certificate /etc/nginx-server-certs/tls.crt;
     ssl_certificate_key /etc/nginx-server-certs/tls.key;
+    proxy_http_version 1.1 ;
+
+    location / {
+      proxy_pass      https://my-nginx.default.svc.cluster.local;
+    }
   }
 }
 
