--- a/tls-passthrough/nginx2.conf
+++ b/tls-passthrough/nginx2.conf
@@ -5,7 +5,11 @@ http {
   log_format main '$remote_addr - $remote_user [$time_local]  $status '
   '"$request" $body_bytes_sent "$http_referer" '
   '"$http_user_agent" "$http_x_forwarded_for"';
-  access_log /var/log/nginx/access.log main;
+  log_format combined_ssl '$remote_addr - $remote_user [$time_local] '
+                        '$ssl_protocol/$ssl_cipher '
+                        '"$request" $status $body_bytes_sent '
+                        '"$http_referer" "$http_user_agent"';
+  access_log /var/log/nginx/access.log combined_ssl;
   error_log  /var/log/nginx/error.log;
 
   server {
