--- a/dashboard-clusterrolebinding.yaml
+++ b/dashboard-clusterrolebinding.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: admin-user
+  name: dashboard-admin-user
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
